// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto2";

package service;

import "spec_metadata/spec.proto";

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/hadoop/index.html
// ----------------------------------------------------------------------------

service HadoopService {
	option (qingcloud.api.spec_metadata.service_option) = {
		external_docs: {
			url: "https://docs.qingcloud.com/api/hadoop/index.html"
		}
	};

	rpc AddHadoopNodes(AddHadoopNodesInput) returns (AddHadoopNodesOutput);
	rpc DeleteHadoopNodes(DeleteHadoopNodesInput) returns (DeleteHadoopNodesOutput);
	rpc StartHadoops(StartHadoopsInput) returns (StartHadoopsOutput);
	rpc StopHadoops(StopHadoopsInput) returns (StopHadoopsOutput);
}

// ----------------------------------------------------------------------------

message AddHadoopNodesInput {
	optional string hadoop = 1;
	optional int32 node_count = 2;
	optional string hadoop_node_name = 3;
	repeated PrivateIps private_ips = 4;

	message PrivateIps {
		optional string role = 1;
		optional string private_ips = 2;
	}
}
message AddHadoopNodesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string hadoop_id = 4;
	repeated string hadoop_new_node_ids = 5;
}

// ----------------------------------------------------------------------------

message DeleteHadoopNodesInput {
	optional string hadoop = 1;
	repeated string hadoop_nodes = 2;
}
message DeleteHadoopNodesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string hadoop_id = 4;
}

// ----------------------------------------------------------------------------

message StartHadoopsInput {
	repeated string hadoops = 1;
}
message StartHadoopsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message StopHadoopsInput {
	repeated string hadoops = 1;
}
message StopHadoopsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
