// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto2";

package service;

import "types.proto";
import "spec_metadata/spec.proto";

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/job/index.html
// ----------------------------------------------------------------------------

service JobService {
	option (qingcloud.api.spec_metadata.service_option) = {
		external_docs: {
			url: "https://docs.qingcloud.com/api/job/index.html"
		}
	};

	rpc DescribeJobs(DescribeJobsInput) returns (DescribeJobsOutput);
}

// ----------------------------------------------------------------------------

message DescribeJobsInput {
	repeated string jobs = 1;
	optional int32 limit = 2;
	optional int32 offset = 3;
	repeated string status = 4;
	optional int32 verbose = 5;
}
message DescribeJobsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated Job job_set = 4;
	optional int32 total_count = 5;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
